@@ -21,22 +21,34 @@ import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.BDDMockito.given;
 import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
+import java.util.stream.Stream;
+import org.activiti.api.runtime.shared.query.Order;
+import org.activiti.api.runtime.shared.query.Pageable;
 import org.activiti.api.runtime.shared.security.SecurityManager;
 import org.activiti.api.task.model.Task;
 import org.activiti.api.task.model.builders.TaskPayloadBuilder;
 import org.activiti.api.task.model.impl.TaskImpl;
 import org.activiti.api.task.model.payloads.AssignTaskPayload;
+import org.activiti.api.task.model.payloads.ClaimTaskPayload;
+import org.activiti.api.task.model.payloads.GetTasksPayload;
 import org.activiti.api.task.model.payloads.UpdateTaskPayload;
+import org.activiti.api.task.runtime.TaskIdentificationStrategy;
+import org.activiti.engine.ActivitiTaskAlreadyClaimedException;
 import org.activiti.engine.TaskService;
+import org.activiti.engine.task.TaskQuery;
 import org.activiti.runtime.api.model.impl.APITaskConverter;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.Spy;
@@ -64,7 +76,7 @@ public class TaskRuntimeImplTest {
     private TaskService taskService;
 
     @Test
-    public void should_returnResultOfHelper_when_updateTask() {
+    void should_returnResultOfHelper_when_updateTask() {
         //given
         UpdateTaskPayload updateTaskPayload = TaskPayloadBuilder.update()
             .withTaskId("taskId")
@@ -82,7 +94,7 @@ public class TaskRuntimeImplTest {
     }
 
     @Test
-    public void assign_should_returnIllegalStateException_when_assigneeIsNotACandidateUser() {
+    void assign_should_returnIllegalStateException_when_assigneeIsNotACandidateUser() {
         //given
         AssignTaskPayload assignTaskPayload = TaskPayloadBuilder.assign()
             .withTaskId("taskId")
@@ -103,7 +115,7 @@ public class TaskRuntimeImplTest {
     }
 
     @Test
-    public void assign_should_updateTaskAssignee_whenAssigneeIsACandidateUser() {
+    void assign_should_updateTaskAssignee_whenAssigneeIsACandidateUser() {
         //given
         when(securityManager.getAuthenticatedUserId()).thenReturn(AUTHENTICATED_USER);
 
@@ -113,7 +125,7 @@ public class TaskRuntimeImplTest {
             .withTaskId(taskId)
             .withAssignee(newAssignee)
             .build();
-        List<String> userCandidates = Arrays.asList(newAssignee);
+        List<String> userCandidates = List.of(newAssignee);
         doReturn(userCandidates).when(taskRuntime).userCandidates(taskId);
         TaskImpl task = mock(TaskImpl.class);
         given(task.getAssignee()).willReturn("user");
@@ -123,5 +135,374 @@ public class TaskRuntimeImplTest {
 
         verify(taskService).unclaim(taskId);
         verify(taskService).claim(taskId, newAssignee);
+    }
+
+    @Test
+    void claim_should_notReclaimAndShouldNotThrow_when_taskAlreadyAssignedToAuthenticatedUser() {
+        //given
+        when(securityManager.getAuthenticatedUserId()).thenReturn(AUTHENTICATED_USER);
+
+        String taskId = "taskId";
+        ClaimTaskPayload claimTaskPayload = TaskPayloadBuilder.claim().withTaskId(taskId).build();
+
+        TaskImpl claimedTask = mock(TaskImpl.class);
+        when(claimedTask.getAssignee()).thenReturn(AUTHENTICATED_USER);
+        doReturn(claimedTask).when(taskRuntime).task(taskId);
+
+        //when
+        Task result = taskRuntime.claim(claimTaskPayload);
+
+        //then
+        assertThat(result).isEqualTo(claimedTask);
+        verify(taskService, never()).claim(any(), any());
+    }
+
+    @Test
+    void claim_should_claimTask_when_taskIsUnassigned() {
+        //given
+        when(securityManager.getAuthenticatedUserId()).thenReturn(AUTHENTICATED_USER);
+
+        String taskId = "taskId";
+        ClaimTaskPayload claimTaskPayload = TaskPayloadBuilder.claim().withTaskId(taskId).build();
+
+        TaskImpl unassignedTask = mock(TaskImpl.class);
+        when(unassignedTask.getAssignee()).thenReturn(null);
+
+        TaskImpl claimedTask = mock(TaskImpl.class);
+        doReturn(unassignedTask, claimedTask).when(taskRuntime).task(taskId);
+
+        //when
+        Task result = taskRuntime.claim(claimTaskPayload);
+
+        //then
+        assertThat(result).isEqualTo(claimedTask);
+        verify(taskService).claim(taskId, AUTHENTICATED_USER);
+    }
+
+    @Test
+    void claim_should_claimTask_when_taskAssigneeIsEmptyString() {
+        //given
+        when(securityManager.getAuthenticatedUserId()).thenReturn(AUTHENTICATED_USER);
+
+        String taskId = "taskId";
+        ClaimTaskPayload claimTaskPayload = TaskPayloadBuilder.claim().withTaskId(taskId).build();
+
+        TaskImpl taskWithEmptyAssignee = mock(TaskImpl.class);
+        when(taskWithEmptyAssignee.getAssignee()).thenReturn("");
+
+        TaskImpl claimedTask = mock(TaskImpl.class);
+        doReturn(taskWithEmptyAssignee, claimedTask).when(taskRuntime).task(taskId);
+
+        //when
+        Task result = taskRuntime.claim(claimTaskPayload);
+
+        //then
+        assertThat(result).isEqualTo(claimedTask);
+        verify(taskService).claim(taskId, AUTHENTICATED_USER);
+    }
+
+    @Test
+    void claim_should_throwIllegalStateException_when_taskAssignedToDifferentUser() {
+        //given
+        when(securityManager.getAuthenticatedUserId()).thenReturn(AUTHENTICATED_USER);
+
+        String taskId = "taskId";
+        ClaimTaskPayload claimTaskPayload = TaskPayloadBuilder.claim().withTaskId(taskId).build();
+
+        TaskImpl claimedTask = mock(TaskImpl.class);
+        when(claimedTask.getAssignee()).thenReturn("anotherUser");
+        doReturn(claimedTask).when(taskRuntime).task(taskId);
+
+        //when
+        Throwable thrown = catchThrowable(() -> taskRuntime.claim(claimTaskPayload));
+
+        //then
+        assertThat(thrown)
+            .isInstanceOf(IllegalStateException.class)
+            .hasMessageStartingWith(
+                "The task was already claimed, the assignee of this task needs to release it first for you to claim it"
+            );
+        verify(taskService, never()).claim(any(), any());
+    }
+
+    @ParameterizedTest(name = "sorting by createdDate {0}")
+    @MethodSource("provideOrderDirections")
+    void tasks_should_invokeOrderByTaskCreateTime_when_sortingByCreatedDate(
+        Order.Direction direction,
+        java.util.function.Function<TaskQuery, TaskQuery> directionMethod,
+        java.util.function.Consumer<TaskQuery> verifyDirection
+    ) {
+        //given
+        when(securityManager.getAuthenticatedUserId()).thenReturn(AUTHENTICATED_USER);
+        when(securityManager.getAuthenticatedUserGroups()).thenReturn(Collections.emptyList());
+
+        TaskQuery taskQuery = mock();
+        TaskQuery sortedQuery = mock();
+        TaskQuery directedQuery = mock();
+
+        when(taskService.createTaskQuery()).thenReturn(taskQuery);
+        when(taskQuery.or()).thenReturn(taskQuery);
+        when(taskQuery.taskCandidateOrAssigned(AUTHENTICATED_USER, Collections.emptyList()))
+            .thenReturn(taskQuery);
+        when(taskQuery.taskOwner(AUTHENTICATED_USER)).thenReturn(taskQuery);
+        when(taskQuery.endOr()).thenReturn(taskQuery);
+        when(taskQuery.orderByTaskCreateTime()).thenReturn(sortedQuery);
+        when(directionMethod.apply(sortedQuery)).thenReturn(directedQuery);
+        when(directedQuery.listPage(0, 50)).thenReturn(Collections.emptyList());
+        when(directedQuery.count()).thenReturn(0L);
+        when(taskConverter.from(Collections.emptyList())).thenReturn(Collections.emptyList());
+
+        Order order = Order.by("createdDate", direction);
+        Pageable pageable = Pageable.of(0, 50, order);
+        GetTasksPayload payload = TaskPayloadBuilder.tasks().build();
+
+        //when
+        taskRuntime.tasks(pageable, payload);
+
+        //then
+        verify(taskQuery).orderByTaskCreateTime();
+        verifyDirection.accept(sortedQuery);
+    }
+
+    private static Stream<Arguments> provideOrderDirections() {
+        return Stream.of(
+            Arguments.of(
+                Order.Direction.ASC,
+                (java.util.function.Function<TaskQuery, TaskQuery>) TaskQuery::asc,
+                (java.util.function.Consumer<TaskQuery>) query -> verify(query).asc()
+            ),
+            Arguments.of(
+                Order.Direction.DESC,
+                (java.util.function.Function<TaskQuery, TaskQuery>) TaskQuery::desc,
+                (java.util.function.Consumer<TaskQuery>) query -> verify(query).desc()
+            )
+        );
+    }
+
+    @Test
+    void tasks_should_ignoreUnsupportedField_gracefully() {
+        //given
+        when(securityManager.getAuthenticatedUserId()).thenReturn(AUTHENTICATED_USER);
+        when(securityManager.getAuthenticatedUserGroups()).thenReturn(Collections.emptyList());
+
+        TaskQuery taskQuery = mock();
+
+        when(taskService.createTaskQuery()).thenReturn(taskQuery);
+        when(taskQuery.or()).thenReturn(taskQuery);
+        when(taskQuery.taskCandidateOrAssigned(AUTHENTICATED_USER, Collections.emptyList()))
+            .thenReturn(taskQuery);
+        when(taskQuery.taskOwner(AUTHENTICATED_USER)).thenReturn(taskQuery);
+        when(taskQuery.endOr()).thenReturn(taskQuery);
+        when(taskQuery.listPage(0, 50)).thenReturn(Collections.emptyList());
+        when(taskQuery.count()).thenReturn(0L);
+        when(taskConverter.from(Collections.emptyList())).thenReturn(Collections.emptyList());
+
+        Order order = Order.by("unsupportedField", Order.Direction.ASC);
+        Pageable pageable = Pageable.of(0, 50, order);
+        GetTasksPayload payload = TaskPayloadBuilder.tasks().build();
+
+        //when
+        taskRuntime.tasks(pageable, payload);
+
+        //then
+        verify(taskQuery, never()).orderByTaskCreateTime();
+    }
+
+    @ParameterizedTest(name = "with {0}")
+    @MethodSource("provideNullOrderScenarios")
+    void tasks_should_handleNullOrder_gracefully(String scenario, Pageable pageable) {
+        //given
+        when(securityManager.getAuthenticatedUserId()).thenReturn(AUTHENTICATED_USER);
+        when(securityManager.getAuthenticatedUserGroups()).thenReturn(Collections.emptyList());
+
+        TaskQuery taskQuery = mock();
+
+        when(taskService.createTaskQuery()).thenReturn(taskQuery);
+        when(taskQuery.or()).thenReturn(taskQuery);
+        when(taskQuery.taskCandidateOrAssigned(AUTHENTICATED_USER, Collections.emptyList()))
+            .thenReturn(taskQuery);
+        when(taskQuery.taskOwner(AUTHENTICATED_USER)).thenReturn(taskQuery);
+        when(taskQuery.endOr()).thenReturn(taskQuery);
+        when(taskQuery.listPage(0, 50)).thenReturn(Collections.emptyList());
+        when(taskQuery.count()).thenReturn(0L);
+        when(taskConverter.from(Collections.emptyList())).thenReturn(Collections.emptyList());
+
+        GetTasksPayload payload = TaskPayloadBuilder.tasks().build();
+
+        //when
+        taskRuntime.tasks(pageable, payload);
+
+        //then
+        verify(taskQuery, never()).orderByTaskCreateTime();
+    }
+
+    private static Stream<Arguments> provideNullOrderScenarios() {
+        return Stream.of(
+            Arguments.of("null order", Pageable.of(0, 50)),
+            Arguments.of("null property", Pageable.of(0, 50, Order.by(null, Order.Direction.ASC)))
+        );
+    }
+
+    @Test
+    void tasks_should_handleNullDirection_gracefully() {
+        //given
+        when(securityManager.getAuthenticatedUserId()).thenReturn(AUTHENTICATED_USER);
+        when(securityManager.getAuthenticatedUserGroups()).thenReturn(Collections.emptyList());
+
+        TaskQuery taskQuery = mock();
+        Order mockOrderNullDirection = mock(Order.class);
+        when(mockOrderNullDirection.getProperty()).thenReturn("createdDate");
+        when(mockOrderNullDirection.getDirection()).thenReturn(null);
+
+        when(taskService.createTaskQuery()).thenReturn(taskQuery);
+        when(taskQuery.or()).thenReturn(taskQuery);
+        when(taskQuery.taskCandidateOrAssigned(AUTHENTICATED_USER, Collections.emptyList()))
+            .thenReturn(taskQuery);
+        when(taskQuery.taskOwner(AUTHENTICATED_USER)).thenReturn(taskQuery);
+        when(taskQuery.endOr()).thenReturn(taskQuery);
+        when(taskQuery.listPage(0, 50)).thenReturn(Collections.emptyList());
+        when(taskQuery.count()).thenReturn(0L);
+        when(taskConverter.from(Collections.emptyList())).thenReturn(Collections.emptyList());
+
+        Pageable pageable = Pageable.of(0, 50, mockOrderNullDirection);
+        GetTasksPayload payload = TaskPayloadBuilder.tasks().build();
+
+        //when
+        taskRuntime.tasks(pageable, payload);
+
+        //then
+        verify(taskQuery, never()).orderByTaskCreateTime();
+    }
+
+    @Test
+    void nextTask_should_returnOldestAssignedTask_beforeTryingCandidateTasks() {
+        //given
+        when(securityManager.getAuthenticatedUserId()).thenReturn(AUTHENTICATED_USER);
+
+        TaskQuery assignedTaskQuery = mock();
+        org.activiti.engine.task.Task assignedEngineTask = mock();
+        Task assignedTask = mock();
+
+        when(taskService.createTaskQuery()).thenReturn(assignedTaskQuery);
+        when(assignedTaskQuery.taskAssignee(AUTHENTICATED_USER)).thenReturn(assignedTaskQuery);
+        when(assignedTaskQuery.orderByTaskCreateTime()).thenReturn(assignedTaskQuery);
+        when(assignedTaskQuery.asc()).thenReturn(assignedTaskQuery);
+        when(assignedTaskQuery.listPage(0, 1)).thenReturn(List.of(assignedEngineTask));
+        when(taskConverter.fromWithCandidates(assignedEngineTask)).thenReturn(assignedTask);
+
+        //when
+        Task result = taskRuntime.nextTask(TaskIdentificationStrategy.CLAIM_BEFORE_OPEN_OLDEST_FIRST);
+
+        //then
+        assertThat(result).isEqualTo(assignedTask);
+        verify(taskService, never()).claim(any(), any());
+    }
+
+    @Test
+    void nextTask_should_claimOldestCandidateTask_whenNoAssignedTasksAreAvailable() {
+        //given
+        when(securityManager.getAuthenticatedUserId()).thenReturn(AUTHENTICATED_USER);
+        when(securityManager.getAuthenticatedUserGroups()).thenReturn(Collections.singletonList("group"));
+
+        TaskQuery assignedTaskQuery = mock();
+        TaskQuery candidateTaskQuery = mock();
+        org.activiti.engine.task.Task candidateEngineTask = mock();
+        Task claimedTask = mock();
+
+        when(candidateEngineTask.getId()).thenReturn("candidate-task-id");
+
+        when(taskService.createTaskQuery()).thenReturn(assignedTaskQuery, candidateTaskQuery);
+
+        when(assignedTaskQuery.taskAssignee(AUTHENTICATED_USER)).thenReturn(assignedTaskQuery);
+        when(assignedTaskQuery.orderByTaskCreateTime()).thenReturn(assignedTaskQuery);
+        when(assignedTaskQuery.asc()).thenReturn(assignedTaskQuery);
+        when(assignedTaskQuery.listPage(0, 1)).thenReturn(Collections.emptyList());
+
+        when(candidateTaskQuery.taskCandidateUser(AUTHENTICATED_USER, Collections.singletonList("group")))
+            .thenReturn(candidateTaskQuery);
+        when(candidateTaskQuery.orderByTaskCreateTime()).thenReturn(candidateTaskQuery);
+        when(candidateTaskQuery.asc()).thenReturn(candidateTaskQuery);
+        when(candidateTaskQuery.listPage(0, 3)).thenReturn(List.of(candidateEngineTask));
+        when(taskRuntimeHelper.getInternalTaskWithChecks("candidate-task-id")).thenReturn(candidateEngineTask);
+        when(taskConverter.fromWithCandidates(candidateEngineTask)).thenReturn(claimedTask);
+
+        //when
+        Task result = taskRuntime.nextTask(null);
+
+        //then
+        assertThat(result).isEqualTo(claimedTask);
+        verify(taskService).claim("candidate-task-id", AUTHENTICATED_USER);
+    }
+
+    @Test
+    void nextTask_should_tryNextCandidateTask_whenOldestCandidateWasClaimedConcurrently() {
+        //given
+        when(securityManager.getAuthenticatedUserId()).thenReturn(AUTHENTICATED_USER);
+        when(securityManager.getAuthenticatedUserGroups()).thenReturn(Collections.singletonList("group"));
+
+        TaskQuery assignedTaskQuery = mock();
+        TaskQuery candidateTaskQuery = mock();
+        org.activiti.engine.task.Task firstCandidate = mock();
+        org.activiti.engine.task.Task secondCandidate = mock();
+        Task claimedTask = mock();
+
+        when(firstCandidate.getId()).thenReturn("candidate-task-id-1");
+        when(secondCandidate.getId()).thenReturn("candidate-task-id-2");
+
+        when(taskService.createTaskQuery()).thenReturn(assignedTaskQuery, candidateTaskQuery);
+
+        when(assignedTaskQuery.taskAssignee(AUTHENTICATED_USER)).thenReturn(assignedTaskQuery);
+        when(assignedTaskQuery.orderByTaskCreateTime()).thenReturn(assignedTaskQuery);
+        when(assignedTaskQuery.asc()).thenReturn(assignedTaskQuery);
+        when(assignedTaskQuery.listPage(0, 1)).thenReturn(Collections.emptyList());
+
+        when(candidateTaskQuery.taskCandidateUser(AUTHENTICATED_USER, Collections.singletonList("group")))
+            .thenReturn(candidateTaskQuery);
+        when(candidateTaskQuery.orderByTaskCreateTime()).thenReturn(candidateTaskQuery);
+        when(candidateTaskQuery.asc()).thenReturn(candidateTaskQuery);
+        when(candidateTaskQuery.listPage(0, 3)).thenReturn(List.of(firstCandidate, secondCandidate));
+
+        Map<String, org.activiti.engine.task.Task> internalTasksById = Map.of(
+            "candidate-task-id-1",
+            firstCandidate,
+            "candidate-task-id-2",
+            secondCandidate
+        );
+        Map<String, Task> apiTasksById = Map.of("candidate-task-id-2", claimedTask);
+        when(taskRuntimeHelper.getInternalTaskWithChecks(any())).thenAnswer(invocation ->
+            internalTasksById.get(invocation.getArgument(0, String.class))
+        );
+        when(taskConverter.fromWithCandidates(any())).thenAnswer(invocation -> {
+            org.activiti.engine.task.Task engineTask = invocation.getArgument(0, org.activiti.engine.task.Task.class);
+            return engineTask == null ? null : apiTasksById.get(engineTask.getId());
+        });
+
+        org.mockito.Mockito.doThrow(new ActivitiTaskAlreadyClaimedException("candidate-task-id-1", "other-user"))
+            .when(taskService)
+            .claim("candidate-task-id-1", AUTHENTICATED_USER);
+
+        //when
+        Task result = taskRuntime.nextTask(TaskIdentificationStrategy.CLAIM_BEFORE_OPEN_OLDEST_FIRST);
+
+        //then
+        assertThat(result).isEqualTo(claimedTask);
+        verify(taskService).claim("candidate-task-id-1", AUTHENTICATED_USER);
+        verify(taskService).claim("candidate-task-id-2", AUTHENTICATED_USER);
+    }
+
+    @Test
+    void nextTask_should_throwIllegalStateException_whenNoAuthenticatedUserIsPresent() {
+        //given
+        when(securityManager.getAuthenticatedUserId()).thenReturn(null);
+
+        //when
+        Throwable thrown = catchThrowable(() ->
+            taskRuntime.nextTask(TaskIdentificationStrategy.CLAIM_BEFORE_OPEN_OLDEST_FIRST)
+        );
+
+        //then
+        assertThat(thrown)
+            .isInstanceOf(IllegalStateException.class)
+            .hasMessage("You need an authenticated user to perform this operation");
     }
 }
